--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>net.karneim</groupId>
       <artifactId>pojobuilder</artifactId>
-      <version>3.6.0</version>
+      <version>[3.4.2,)</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -34,13 +34,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <compilerArgument>-proc:none</compilerArgument>
-
+          <source>1.6</source>
+          <target>1.6</target>
+          <generatedSourcesDirectory>${basedir}/src/generated/java</generatedSourcesDirectory>
         </configuration>
       </plugin>
-
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
@@ -65,26 +63,24 @@
         </executions>
       </plugin>
       <plugin>
-                    <groupId>org.bsc.maven</groupId>
-                    <artifactId>maven-processor-plugin</artifactId>
-                    <version>3.1.0</version>
-                    <executions>
-                        <execution>
-                            <id>process-messages</id>
-                            <goals>
-                                <goal>process</goal>
-                            </goals>
-                            <phase>generate-sources</phase>
-                            <configuration>
-                                <processors>
-                                    <processor>
-                                        net.karneim.pojobuilder.processor.AnnotationProcessor 
-                                    </processor>
-                                </processors>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>sample.CallScala</mainClass>
+          <arguments>
+            <argument>foo</argument>
+            <argument>bar</argument>
+          </arguments>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
